--- a/.github/workflows/ad-hoc.yml
+++ b/.github/workflows/ad-hoc.yml
@@ -18,3 +18,6 @@ jobs:
 
       - name: Show ref_name
         run: echo ${{ github.ref_name }}
+      
+      - name: Show github.base_ref
+        run: echo ${{ github.base_ref }}
